--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset='utf-8'>
     <title>TITLE</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
   <body>
     <div id="app"></div>
     <script src="js/app.js"></script>
+    <script src="https://kit.fontawesome.com/0426341cc5.js" crossorigin="anonymous"></script>
     <script>site.core.main();</script>
   </body>
 </html>
